Allow specifying edit URL, fix CSS for scrollbar in codemirror (0.4.6)

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -30,11 +30,16 @@ body {
     background-color: #fdfdfd;
 }
 
-.starboard-notebook-footer {
-    color: #ddd;
+.starboard-notebook-footer * {
+    color: #cecece;
     font-size: 11px;
     margin-left: 2px;
-    margin-top: 24px;
+    margin-top: 8px;
+    text-decoration: none;
+}
+
+.starboard-notebook-footer a:hover {
+    text-decoration: underline;
 }
 
 .cm-gutters {
@@ -47,10 +52,6 @@ body {
 
 .cm-wrap.cm-focused {
     outline: 1px solid #ccc !important;
-}
-
-.cm-wrap {
-    height: calc(100% - 2px);
 }
 
 .cm-activeLine {
